# IntelliLab_GC_ModV2

./: .env.kb.example  .eslint-baseline.js  .gitignore  .pre-commit-config.yaml  AI_FEATURES_README.md  AI_TROUBLESHOOTER_COMPLETE.md  AI_TROUBLESHOOTER_DEMO.py  ARTIFACTS_E2E.md  ASSET_INVENTORY.md  AUTOMATION_EVIDENCE_REPORT.md  AUTOPILOT_E2E_COMPLETION_REPORT.md  BRAND_SCRUB_REPORT.md  BULLETPROOF_TESTING_GUIDE.md  CANONICAL_THEME_REPORT.md  CHROMAVISION_TEST_RESULTS_FINAL.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TESTING_GUIDE.md  CURRENT_PHASE_STATUS.md  CURRENT_STATUS.md  DETECTION_LIMIT_IMPLEMENTATION_COMPLETE.md  DOCTORAL_COMMITTEE_RESPONSE.md  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  Dockerfile.frontend.dev  E2E_SWEEP_REPORT.md  EMERGENCY_DEBUG_REPORT.md  ESLINT_CLEANUP_FINAL_REPORT.md  ESLINT_REPORT.md  FE_START_SUMMARY.md  FIELD_TEST_GUIDE.md  FRONTEND_FIXES.md  FRONTEND_STACK.md  FRONTEND_STARTUP_FAILURE_REPORT.md  GC_SANDBOX_DEPLOYMENT_GUIDE.md  GC_SIMULATION_ASSESSMENT.py  GC_TOOLS_README.md  GITHUB_DEPLOYMENT.md  GITHUB_PRO_TOOLS_GUIDE.md  Goal.txt  (+126 more)
ai/: kb_retriever.py
backend/: PHASE6_COMPLETION_REPORT.md  README.md  STATUS.md  ai_analytics_api.py  alembic.ini  api_validation_tester.py  automated_lab_tester.py  database.py  dr_claude_validation_report_20250820_200606.json  dr_claude_validation_report_20250820_200657.json  dr_claude_validation_report_20250820_200749.json  dr_claude_validation_report_20250820_201243.json  dr_claude_validation_report_20250820_201348.json  env.example  init_sample_data.py  main.py  requirements.txt  requirements_ai.txt  requirements_simple.txt  requirements_test.txt  run_doctoral_tests.py  seed_sandbox_data.py  stress_test.py  test_auth_system.py  test_db_connection.py  test_doctoral_requirements.py  test_imports.py  test_report_generator.py  test_runner.py
common/: base_tool.py  data_models.py
config/: default_settings.json
core/: app_manager.py  method_manager.py  tool_interop.py  tool_registry.py
docs/: CALIBRATION_SEQUENCE_TESTING.md  CHROMATOGRAPHY_TESTING.md  INSTRUMENT_ONBOARDING.md  PART11_COMPLIANCE.md  PHASE3_TESTING.md  PHASE4_TESTING.md  PHASE5_TESTING.md  PHASE6_TESTING.md  PHASE7_TESTING.md  QC_RULES_TESTING.md  REPORTING_GUIDE.md  RUN_AND_VERIFY.md  SEQUENCE_QC_OPERATIONS.md
frontend/: .eslintrc.js  .eslintrc.json  COMPREHENSIVE_TESTING_GUIDE.md  DEMO_MODE.md  DEMO_README.md  E2E_TESTING_GUIDE.md  FRONTEND_REPAIR_STATUS.md  INTELLILAB_GC_UI_README.md  NUCLEAR_CLEANUP_STATUS.md  PHASE_C_UI_OVERHAUL.md  PLAYWRIGHT_VALIDATION_GUIDE.md  PRODUCTION_DEPLOYMENT_REPORT.md  README.md  TESTING_INFRASTRUCTURE.md  TESTING_REPORT.md  TESTING_RESULTS.md  TESTING_SUITE_SUMMARY.md  VITE_MIGRATION_PLAN.md  WINDOWS_DEVELOPMENT_GUIDE.md  check_status.js  comprehensive_testing_suite.ps1  index.html  lint-output.txt  package-lock.json  package.json  package_simple.json  playwright.config.ts  reset.ps1  restart-dev.bat  run_testing_suite.bat  simple_testing_suite.ps1  start-enterprise.bat  start-enterprise.sh  start_clean.bat  start_demo.bat  step_by_step_testing.ps1  tailwind.config.js  test-app.bat  test-frontend.html  test-navigation.html  (+7 more)
monitoring/: prometheus.yml
phase2/: compounds_database.py  instrument_lab_system.py  method_templates.py
public/: index.html
scripts/: README.md  dev.ps1  (+15 more)
(+507 files in other folders)
